Add some missing coverage